# GameBoy

./: README.md  fetch.py  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  output.css
src-tauri/: Cargo.toml  ChillMaster.lnk  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/pyfiles/: switchmode.py
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/models/: power.rs
src-tauri/src/power_manager/: mod.rs  power_manager.rs
src-tauri/src/services/: mod.rs  power.rs  system_monitor.rs
src-tauri/src/system_monitor/: mod.rs  system_monitor.rs
src-tauri/src/utils/: windows.rs
src/components/: Systemstats.tsx  TheStatemanager.tsx
