[package]
name = "Grimoire"
version = "2.0.0"
description = "A system monitor for Windows"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "grimoire_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.29.0"
nvml-wrapper = "0.9.0"
crossterm = "0.26.1"
chrono = "0.4"
winapi = { version = "0.3", features = ["processthreadsapi", "winbase"] }
lazy_static = "1.4.0"
