[package]
name = "Grimoire"
version = "2.0.0"
description = "Built For Performance!"
authors = ["you"]
edition = "2021"

[lib]
name = "grimoire_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.29.0"
nvml-wrapper = { version = "0.9.0", optional = true }
crossterm = "0.26.1"
chrono = "0.4"
winapi = { version = "0.3", features = ["processthreadsapi", "winbase"] }
lazy_static = "1.4.0"
rayon = "1.7"
parking_lot = "0.12"


[features]
default = ["nvidia-gpu"]
nvidia-gpu = ["nvml-wrapper"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
split-debuginfo = "unpacked"
